--- a/binding2/mdsal-binding2-generator-util/pom.xml
+++ b/binding2/mdsal-binding2-generator-util/pom.xml
@@ -71,7 +71,17 @@
             <artifactId>commons-lang3</artifactId>
         </dependency>
     </dependencies>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <configuration>
+                    <propertyExpansion>checkstyle.violationSeverity=error</propertyExpansion>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
   <!--
       Maven Site Configuration
 
