--- a/binding2/mdsal-binding2-java-api-generator/pom.xml
+++ b/binding2/mdsal-binding2-java-api-generator/pom.xml
@@ -148,6 +148,14 @@
                 </executions>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <configuration>
+                    <propertyExpansion>checkstyle.violationSeverity=error</propertyExpansion>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
